Fix colour contrast error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ footer {
 
 #homepage {
     max-width: 1140px;
-    background-color: #aaaaaa;
+    background-color: #eeeeee;
     display: flex;
     flex-direction: column;
     margin: auto;
